# win-playgound-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
project1/: CMakeLists.txt
project1/src/: D3D12HelloTriangle.cpp  D3D12HelloTriangle.h  DXSample.cpp  DXSample.h  DXSampleHelper.h  Win32Application.cpp  Win32Application.h  main.cpp  shaders.hlsl  stdafx.cpp  stdafx.h
